-Fixed CSS appearence. Font color on Info was unreadable

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -39,39 +39,31 @@
 }
 
 ._600{ /*emergency*/
-    /*background-color: rgba(255, 63, 0, 0.2);*/
     color: #FF3F00;
 }
 
 ._550{ /*alert*/
-    background-color: rgba(255, 126, 0, 0.2);
     color: #FF3F00;
 }
 
 ._500{ /*critical*/
-    background-color: rgba(255, 189, 0, 0.2);
     color: #FF3F00;
 }
 
 ._400{ /*error*/
-    background-color: rgba(255, 255, 0, 0.2);
     color: #AE2C00;
 }
 ._300{ /*warning*/
-    background-color: rgba(192, 255, 0, 0.2);
     color: #AE2C00;
 }
 ._250{ /*notice*/
-    background-color: rgba(66, 255, 0, 0.2);
-    color: #42FF00;
+    color: #1e20ff;
 }
 ._200{ /*info*/
-    background-color: rgba(66, 255, 0, 0.2);
-    color: #42FF00;
+    color: #1e20ff;
 }
 ._100{ /*notice*/
-    background-color: rgba(66, 255, 0, 0.2);
-    color: #42FF00;
+    color: #1e20ff;
 }
 .removeThis {
     cursor: pointer;
